# Rail

./: .gitignore  CMakeLists.txt  Railway.cpp  Railway.h  Railway_notes.txt  Simulation.h  SimulationA.cpp  SimulationE.cpp  SimulationR.cpp  Station.cpp  Station.h  Station_notes.txt  Station_test.cpp  TimeTable.cpp  TimeTable.h  TimeTable_notes.txt  TimeTable_test.cpp  Train.cpp  Train.h  Train_notes.txt  Train_test.cpp  esempi_di_esecuzione.txt  line_description.txt  main.cpp  railway_test.cpp  readme.md  readme.txt  timetable_and_railway_test.cpp  timetables.txt  utility.h  utilityA.cpp  utilityE.cpp  utility_test.cpp
data/: Star_wars.txt  The_lord_of_the_rings.txt  line_description.txt  line_description_1.txt  timetables.txt  timetables1.txt  timetables3.txt  timetables4.txt  timetables_1.txt
testers/: Station_test.cpp  TimeTable_test.cpp
